# mkdocs-publisher

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  LICENSE  README.md  cov.json  coverage.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sandbox.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  docs.yml  feature.yml  future.yml
.github/workflows/: deploy-pages.yml  pull-request.yaml  release.yaml
.obsidian/: app.json  appearance.json  community-plugins.json  surfing-bookmark.json  workspace.json
docs/: 404.html  index.html  mkdocs.yml  sitemap.xml
docs/blog/: index.html
docs/docs/: 01_home.md  index.md
docs/home/: index.html
docs/index-0/: index.html
docs/index-1/: index.html
docs/search/: search_index.json
docs/site/: 404.html  sitemap.xml
docs/test/: index.html
docs_md/: 01_home.md
docs_md/02_setup/: 01_installation.md  02_setting-up-auto-nav.md  03_setting-up-a-blog.md  04_setting-up-a-minifier.md
docs_md/03_how-to-publish/: 01_first_steps.md  README.md
docs_md/04_blog/: README.md  v020.md  v030.md
docs_md/05_dev/: 01_todo.md  09_changelog.md
docs_template/: mkdocs.yml  package-lock.json  package.json  poetry.toml  pyproject.toml
documentation/: 01_home.md  index.md  test.md
documentation/.obsidian/: app.json  appearance.json  command-palette.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  hotkeys.json  templates.json  workspace.json
documentation/02_setup/: 01_installation.md  02_setting-up-auto-nav.md  02_setting-up-meta.md  03_setting-up-a-blog.md  03_setting-up-social-cards.md  04_setting-up-a-minifier.md  04_setting-up-a-social-cards.md  04_setting-up-blog.md  05-setting-up-obsidian.md  05_setting-up-an-obsidian.md  05_setting-up-obsidian.md  06_setting-up-a-meta.md  06_setting-up-minifier.md  09_setting-up-a-minifier.md  README.md
documentation/03_how-to-publish/: 01_first_steps.md  README.md
documentation/04_blog/: README.md  v010-initial-release.md  v020.md  v030.md  v040-minifier-and-autonav.md  v040.md  v041.md  v050-social.md  v050.md  v060-obsidian.md  v060.md  v100-obsidian.md
documentation/05_dev/: 01_backlog.md  01_changelog.md  02_development.md  02_versioning.md  03_versioning.md  08_development.md  09_changelog.md  README.md
documentation/_templates/: _option.md  _setting.md
mkdocs_blog_in/: blog.py  config.py  creators.py  minifiers.py  modifiers.py  parsers.py  rendereres.py  structures.py  translate.py  utils.py
mkdocs_blog_in/cli/: _utils.py  post.py
mkdocs_blog_in/templates/: posts-list.html
mkdocs_publisher/: _utils.py  utils.py
mkdocs_publisher/_cli/: _utils.py  publisher.py
mkdocs_publisher/_common/: html_modifier.py  mkdocs_utils.py  resources.py  url.py
mkdocs_publisher/_shared/: config_enums.py  file_utils.py  html_modifiers.py  links.py  mkdocs_utils.py  publisher_utils.py  resources.py  templates.py  urls.py
mkdocs_publisher/auto_nav/: config.py  plugin.py
mkdocs_publisher/blog/: blog_files.py  config.py  creators.py  modifiers.py  parsers.py  plugin.py  structures.py  translate.py
mkdocs_publisher/debugger/: config.py  loggers.py  plugin.py
mkdocs_publisher/meta/: config.py  meta_files.py  meta_nav.py  nav.py  plugin.py
mkdocs_publisher/minifier/: base.py  config.py  minifiers.py  plugin.py
mkdocs_publisher/obsidian/: backlinks.py  callout.py  callouts.py  config.py  markdown_links.py  md_links.py  plugin.py  vega.py
mkdocs_publisher/social/: config.py  plugin.py
mkdocs_publisher_docs/: 01_home.md  README.md
mkdocs_publisher_docs/.obsidian/: app.json  appearance.json  canvas.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  graph.json  hotkeys.json  types.json  workspace.json
mkdocs_publisher_docs/02_setup/: 01_installation.md  02_setting-up-meta.md  03_setting-up-social-cards.md  04_setting-up-blog.md  05_setting-up-obsidian.md  06_setting-up-minifier.md  99_setting-up-debugger.md  README.md
mkdocs_publisher_docs/02_start/: README.md
mkdocs_publisher_docs/03_how-to-publish/: 01_first_steps.md  README.md
mkdocs_publisher_docs/03_reference/: README.md
mkdocs_publisher_docs/03_setup/: 01_installation.md  README.md
mkdocs_publisher_docs/04_blog/: v010-initial-release.md  v020.md  v030.md  v040-minifier-and-autonav.md  v041.md  v050-social.md  v100-obsidian.md  v110-debugger.md  v111-wikilinks.md  v120-minifier-cache-and-exclude.md
mkdocs_publisher_docs/04_how-to-publish/: 01_first_steps.md
mkdocs_publisher_docs/04_insiders/: README.md
mkdocs_publisher_docs/04_reference/: README.md
mkdocs_publisher_docs/05_blog/: v040-minifier-and-autonav.md  v111-wikilinks.md  v120-minifier-cache-and-exclude.md
mkdocs_publisher_docs/05_dev/: 01_changelog.md  02_development.md  03_versioning.md
mkdocs_publisher_docs/05_how-to/: README.md
mkdocs_publisher_docs/05_how-to-publish/: 01_first_steps.md
mkdocs_publisher_docs/06_blog/: v030.md  v040-minifier-and-autonav.md  v050-social.md  v100-obsidian.md  v110-debugger.md  v111-wikilinks.md  v120-minifier-cache-and-exclude.md  v130-overview.md  v131.md  v140-redirects.md
mkdocs_publisher_docs/06_dev/: 01_changelog.md
mkdocs_publisher_docs/07_dev/: 01_changelog.md  02_development.md  03_versioning.md  README.md
mkdocs_publisher_docs/_templates/: _README.md  _changelog.md  _option.md  _page.md  _post.md
mkdocs_publishing/blog/: config.py  creators.py  modifiers.py  parsers.py  plugin.py  structures.py  translate.py
mkdocs_publishing/cli/: _utils.py
mkdocs_publishing/minifier/: base.py  minifiers.py  plugin.py
overrides/: main.html
src/: modifiers.py  parsers.py  plugin.py  rendereres.py  structures.py
src/cli/: _utils.py  command.py  post.py
src/plugin/: blog.py  config.py  modifiers.py  parsers.py  rendereres.py  translate.py
src/templates/: posts-list.html
tests/: conftest.py
tests/_shared/: config_enums_test.py  conftest.py  links_test.py  mkdocs_utils_test.py  publisher_utils_test.py  resources_test.py  templates_test.py  test_links.py  test_mkdocs_utils.py  test_resources.py  (+2 more)
(+247 files in other folders)
