[tool.poetry]
name = "mkdocs-publisher"
version = "2.0.0"
description = "Publisher for MkDocs - set of plugins for content creators"
authors = ["Maciej 'maQ' Kusz <maciej.kusz@gmail.com>"]
license = "MIT License"
readme = "README.md"
keywords = [
    "mkdocs",
    "mkdocs-plugin",
    "blog",
    "categories",
    "debugger",
    "docs",
    "documentation",
    "frontmatter",
    "markdown",
    "minifier",
    "navigation",
    "obsidian",
    "publisher",
    "tags",
]
packages = [{ include = "mkdocs_publisher" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Text Editors :: Documentation",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
homepage = "https://mkdocs-publisher.github.io/"
repository = "https://github.com/mkdocs-publisher/mkdocs-publisher"
documentation = "https://mkdocs-publisher.github.io/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mkdocs-publisher/mkdocs-publisher/issues"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"
pymdown-extensions = "^10.14.3"
beautifulsoup4 = "^4.13.3"
mkdocs-material = "^9.6.11"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.37.0"
ruff = "^0.5.7"
pyright = "^1.1.398"

[tool.poetry.group.test.dependencies]
coverage = "^7.8.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-check = "^2.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
extraPaths = ["mkdocs_publisher"]
include = ["mkdocs_publisher", "tests"]
reportMissingImports = true
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "--tb=short --log-level=DEBUG --cov-report=html --cov-report=json --cov=mkdocs_publisher"
markers = ["deprecated: Tests no longer used"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # "ANN",
    "ANN101",
    "D",
    "DTZ007",
    "EM102",
    "FIX002",
    "FBT",
    "G004",
    "INP",
    "ISC001",
    "PLR0913",
    "PLR2004",
    "PLW2901",
    "S101",
    "TCH001",
    "TCH002",
    "TCH003",
    "TD002",
    "TD003",   # TODO: remove it
    "TRY003",
    "TRY300",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SLF"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true

[tool.coverage.report]
include_namespace_packages = true
skip_empty = true
skip_covered = true

[tool.coverage.json]
pretty_print = true

[tool.poetry.plugins."mkdocs.plugins"]
pub-blog = "mkdocs_publisher.blog.plugin:BlogPlugin"
pub-debugger = "mkdocs_publisher.debugger.plugin:DebuggerPlugin"
pub-meta = "mkdocs_publisher.meta.plugin:MetaPlugin"
pub-minifier = "mkdocs_publisher.minifier.plugin:MinifierPlugin"
pub-obsidian = "mkdocs_publisher.obsidian.plugin:ObsidianPlugin"
pub-social = "mkdocs_publisher.social.plugin:SocialPlugin"

[tool.poetry.scripts]
mkdocs-pub = "mkdocs_publisher._cli.publisher:app"
