[project]
name = "mkdocs-publisher"
version = "1.4.8"
requires-python = ">=3.9"
description = "Publisher for MkDocs - set of plugins for content creators"
authors = [{name="Maciej 'maQ' Kusz", email="maciej.kusz@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = [
    "mkdocs",
    "mkdocs-plugin",
    "blog",
    "categories",
    "debugger",
    "docs",
    "documentation",
    "frontmatter",
    "markdown",
    "minifier",
    "navigation",
    "obsidian",
    "publisher",
    "tags",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Text Editors :: Documentation",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "mkdocs~=1.0,>=1.6.1",
    "beautifulsoup4~=4.0,>=4.13.4",
    "mkdocs-material~=9.0,>=9.6.15",
    "colorama>=0.4.6",
]

[project.urls]
Homepage = "https://mkdocs-publisher.github.io/"
Repository = "https://github.com/mkdocs-publisher/mkdocs-publisher"
Documentation = "https://mkdocs-publisher.github.io/"
"Bug Tracker" = "https://github.com/mkdocs-publisher/mkdocs-publisher/issues"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "yamllint~=1.0,>=1.37.1",
    "ruff>=0.12.2,<2.0",
    "pyright~=1.0,>=1.1.402",
    "ty>=0.0.1a13",
]
test = [
    "coverage~=7.0,>=7.8.2",
    "pytest~=7.0,>=7.4.4",
    "pytest-cov~=4.0,>=4.1.0",
    "pytest-check~=2.0,>=2.5.3",
]

[tool.hatch.build]
include = [
    "mkdocs_publisher",
]
exclude = [
    "tests",
    ".github",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
extraPaths = [
    "mkdocs_publisher",
]
include = [
    "mkdocs_publisher",
    "tests",
]
exclude = [
    "docs",
    "mkdocs_publisher_docs",
]
reportMissingImports = false
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "--tb=short --log-level=DEBUG --cov-report=html --cov-report=json --cov=mkdocs_publisher"
markers = [
    "deprecated: Tests no longer used",
    ]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]

[tool.ty.environment]
python = "./.venv"

[tool.ty.rules]
missing-argument = "ignore"
redundant-cast = "ignore"
invalid-assignment = "ignore"
possibly-unbound-attribute = "ignore"
invalid-argument-type = "ignore"
possibly-unbound-implicit-call = "ignore"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "SIM"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true

[tool.coverage.report]
include_namespace_packages = true
skip_empty = true
skip_covered = true

[tool.coverage.json]
pretty_print = true

[project.entry-points."mkdocs.plugins"]
pub-blog = "mkdocs_publisher.blog.plugin:BlogPlugin"
pub-debugger = "mkdocs_publisher.debugger.plugin:DebuggerPlugin"
pub-meta = "mkdocs_publisher.meta.plugin:MetaPlugin"
pub-minifier = "mkdocs_publisher.minifier.plugin:MinifierPlugin"
pub-obsidian = "mkdocs_publisher.obsidian.plugin:ObsidianPlugin"
pub-social = "mkdocs_publisher.social.plugin:SocialPlugin"

[project.scripts]
mkdocs-pub = "mkdocs_publisher._cli.publisher:app"
