[tool.poetry]
name = "markdown-docs"
version = "1.3.0"
description = ""
authors = ["Maciej 'maQ' Kusz <maciej.kusz@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [
    {include = "markdown_docs"},
]
homepage = "https://github.com/mkusz/mkdocs-publisher"
repository = "https://github.com/mkusz/mkdocs-publisher"
documentation = "https://mkusz.github.io/mkdocs-publisher"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-publisher = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
